--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pree2e": "webdriver-manager update",
     "e2e": "protractor"
   },
+  //json
   "private": true,
   "dependencies": {
     "@angular/common": "2.2.1",
